--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@vercel/analytics": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
